--- a/config.env
+++ b/config.env
@@ -1,4 +1,4 @@
-ANYKERNEL_SOURCE=https://github.com/osm0sis/AnyKernel3
+ANYKERNEL_SOURCE=https://github.com/Neutron-Toolchains/clang-build-catalogue
 ANYKERNEL_SOURCE_BRANCH=master
 KERNEL_SOURCE=https://github.com/MiCode/Xiaomi_Kernel_OpenSource
 KERNEL_SOURCE_BRANCH=picasso-r-oss
